--- a/app/views/static_pages/overview.html.erb
+++ b/app/views/static_pages/overview.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Home') %>
 <% provide(:heading, 'Overview') %> 
+<script data-turbolinks-track="true" src="/assets/underscore.js?body=1"></script>
 
 <%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
 
