--- a/app/views/static_pages/overview.html.erb
+++ b/app/views/static_pages/overview.html.erb
@@ -2,6 +2,7 @@
 <% provide(:heading, 'Overview') %> 
 
 <%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
+<script src="/assets/underscore.js"></script>
 
 <h3><center>Historical Company Ratings</center></h3>
 <div id="Demo_Chart">
