--- a/app/views/static_pages/overview.html.erb
+++ b/app/views/static_pages/overview.html.erb
@@ -2,6 +2,7 @@
 <% provide(:heading, 'Overview') %> 
 
 <%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
+
 <script src="/assets/underscore.js"></script>
 
 <h3><center>Historical Company Ratings</center></h3>
@@ -107,6 +108,7 @@ new Chartkick.LineChart("Demo_Chart", [{"name":"Green Cab","data":{"2013-02-10 0
     }
  
     //Create template with underscorejs
+    var _ = require("underscore");
     _.templateSettings = {
         interpolate: /\{\{\=(.+?)\}\}/g,// {{= }} & {{ }}
         evaluate: /\{\{(.+?)\}\}/g
