--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,6 +1,6 @@
 <% @column_titles = [ 
     {:sort => "last_name", :title=>"Name"},
-    {:sort => "company_name", :title => "Company"},
+    {:sort => "company_id", :title => "Company"},
     {:sort => "permit_expiration_date", :title => "Permit Expiration Date"},
     {:sort => "permit_number", :title => "Permit #"} ] %>
             
