Fixed companies, riders, rides sorting

--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -1,6 +1,6 @@
 <% @column_titles = [ 
-    {:sort => "driver.name", :title=>"Driver Name"},
-    {:sort => "rider.uuid", :title=>"Rider ID"},
+    {:sort => "driver_id", :title=>"Driver Name"},
+    {:sort => "rider_id", :title=>"Rider ID"},
     {:sort => "estimated_fare", :title=>"Estimated Fare"},
     {:sort => "actual_fare", :title=>"Actual Fare"}] %>
     
