--- a/app/views/ratings/_row_content.html.erb
+++ b/app/views/ratings/_row_content.html.erb
@@ -1,5 +1,5 @@
 <td class="table-link" onclick="<%= link %>"><%= row.driver.last_name %>, <%= row.driver.first_name %></td>
-<td class="table-link" onclick="<%= link %>"><%= row.driver.company_id %></td>
+<td class="table-link" onclick="<%= link %>"><%= row.driver.company.name %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.rating %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.comments %></td>
 <td class="table-link" onclick="<%= link %>"><%= row.timestamp %></td>
