Added ride count to show page

--- a/app/views/riders/show.html.erb
+++ b/app/views/riders/show.html.erb
@@ -16,3 +16,7 @@
   <strong>Rating Count:</strong>
   <%= @rider.ratings.length %>
 </p>
+<p>
+  <strong>Rides Count:</strong>
+  <%= @rider.rides.length %>
+</p>
