--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -17,6 +17,10 @@
       <div class="col-sm-5"><%= f.text_field :name, :class => "form-control" %></div>
     </div>
     <div class="form-group">
+      <%= f.label :phone_number, :class => "col-sm-3 control-label" %>
+      <div class="col-sm-5"><%= f.text_field :phone_number, :class => "form-control" %></div>
+    </div>
+    <div class="form-group">
       <%= f.label :logo, :class => "col-sm-3 control-label" %>
       <div class="col-sm-5"><%= f.file_field :logo%></div>
     </div>
