Added autofocus to fields

--- a/app/views/riders/_form.html.erb
+++ b/app/views/riders/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="form-horizontal">
     <div class="form-group">
       <%= f.label :uuid, :class => "col-sm-3 control-label" %>
-      <div class="col-sm-5"><%= f.text_field :uuid, :class => "form-control" %></div>
+      <div class="col-sm-5"><%= f.text_field :uuid, :class => "form-control", :autofocus => true %></div>
     </div>
 
   <div class="col-sm-offset-3 col-sm-7">
