--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="form-horizontal">
     <div class="form-group">
       <%= f.label :name, :class => "col-sm-3 control-label" %>
-      <div class="col-sm-5"><%= f.text_field :name, :class => "form-control" %></div>
+      <div class="col-sm-5"><%= f.text_field :name, :class => "form-control", :autofocus => true %></div>
     </div>
     <div class="form-group">
       <%= f.label :phone_number, :class => "col-sm-3 control-label" %>
