--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
   <div class="form-horizontal">
     <div class="form-group">
-    <div class="col-sm-5"><%= f.hidden_field :driver_id, :class => "form-control" %></div>
+        <div class="col-sm-5"><%= f.hidden_field :driver_id, :class => "form-control", :autofocus => true %></div>
     </div>
     <div class="form-group">
     <%= f.label :title , :class => "col-sm-3 control-label" %>
