--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="form-horizontal">
       <div class="form-group">
         <%= f.label :first_name, :class => "col-sm-3 control-label" %>
-        <div class="col-sm-5"><%= f.text_field :first_name, :class => "form-control" %></div>
+        <div class="col-sm-5"><%= f.text_field :first_name, :class => "form-control", :autofocus => true %></div>
       </div>
       <div class="form-group">
         <%= f.label :middle_name, :class => "col-sm-3 control-label" %>
