--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="form-horizontal">
     <div class="form-group">
       <%= f.label :driver_id, :class => "col-sm-3 control-label" %>
-      <div class="col-sm-5"><%= f.number_field :driver_id, :class => "form-control" %></div>
+      <div class="col-sm-5"><%= f.number_field :driver_id, :class => "form-control", :autofocus => true %></div>
     </div>
     <div class="form-group">
       <%= f.label :rider_id, :class => "col-sm-3 control-label" %>
