Changed "Average Driver Rating" to "Average Rating"

--- a/app/views/companies/show/_profile.html.erb
+++ b/app/views/companies/show/_profile.html.erb
@@ -16,7 +16,7 @@
   <%= @company.drivers.length %>
 </p>
 <p>
-  <strong>Average Driver Rating:</strong>
+  <strong>Average Rating:</strong>
   <%= sprintf( '%.2f', @company.average_rating) %>
 </p>
 <p>
