--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -7,7 +7,8 @@
   <%= image_tag @company.logo.url(:thumb) %>
     <%= @company.name %> 
 <% end %>
- <p id="notice"><%= notice %></p>
+<!-- NOTICE
+ <p id="notice"><%= notice %></p> -->
 
 <!-- Nav tabs -->
 <ul id="showTab" class="nav nav-tabs">
