--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
     <div class="navbar-collapse collapse"> 
       <ul class="nav navbar-nav">
         <li class= <%= controller.controller_path == 'static_pages' && controller.action_name == 'overview' ? 'active' : '' %> >
-            <%= link_to "Home", overview_path %></li>
+        <%= link_to "Home", overview_path, :id => "overview_button" %></li>
         <li class= <%= controller.controller_path == 'static_pages' && controller.action_name == 'about' ? 'active' : '' %> >
             <%= link_to "About", about_path %></li>
         <li class= <%= controller.controller_path == 'manual' ? 'active' : '' %> ><%= link_to "Help", manual_path %></li>
